# ERP

./: railway.toml
api/: Cargo.toml  Dockerfile  build.sh  nixpacks.toml  railway.toml
api/.sqlx/: query-04899284eccb25ae20d7ed850f45b74ea717d367b1ff757590adf61376704b89.json  query-07766430664a51f14e18f4d8419c5d7da367a9e770bafbef3cb06a8e15f5e104.json  query-07d1b132b5764ed1216703970e3373528ee564e1fa9478edeb6d623b071209d9.json  query-0e59c21370a25709f29a6d30e0a427b34e92539f3fa1086b9b4443b24d7cd427.json  query-0f44d486ee031cf292aeb8651be419cd94f7e9ef9a3370c830caa9d770232fe6.json  query-16d3ccececd16468859f892ead2bc0655f62bb7eb27d73979e5d462b19c794a6.json  query-1979a440a256a4e43f0f9e2e88105393cd6589f2d873951c0ad78fbadc48d1cc.json  query-19ac954f4a9e5cbde3d420830c65c076a9a8cedb96d987fb5cf52d5f95cd92c9.json  query-1bc9e9cee72420335679c9a516a41e577ddebaf100ec7f185ed59696d12da498.json  query-1c03c4abbbc81731fefffbf2dab4f334340be3321e62ea2934245200364fb296.json  query-1dc25323651f1b927fc62b913933f0c49c61a55f8f02bd9ee63ca5d398d38458.json  query-1ea80ea67af1dc381c04659a60a6830cd31564721905ceeab9f5fa94d64934de.json  query-1ec76c0728eb878ee04a69b55310795f4879693b87dd4d48ae62f90d99acbcd0.json  query-264707957c19e408666f573c9cde50c99f2156639b1228da7ba0f370bc751efe.json  query-2754420974678590d8c7f258c2d35bb653affcc2425369ed223762dfcf833f7f.json  query-2870f20bfd3d6e7bb36302fed27b4d4564af6fbd8367169753594c1977b80874.json  query-2a3bd64642fce9a3d8863a76eea75f6eb466a222ff3bc0e4ceb5f276f73903b9.json  query-2a98685e98172c031ef155759e8c4709c34e07df56822e1d91a50441072afec2.json  query-2e636373469dd65e6e5afaf19c0df2f053653bfcbc1e6047b273839fcd97a229.json  query-2f2580009b5f5ce9d1e322634cf3073f2a5f123ef7231f3a48b9805906aaba27.json  query-30c092f551e940581537d742477890a0a994602ffa336828b0d3f425ddb903e8.json  query-3bd74c8018c43ed8370905b81df4845fbe17f42cab70a2156b5f6fbaa154535e.json  query-3e0ae5157641ae673f99b640b58683cd36cf7b19aad6ae269d24683d2c91c4a1.json  query-424195b346f18a14ce9d5995828447d577ca065fc72194c2ffdf64a950aa8274.json  query-4e477836e964d9f35c766a52edb14ab0616aa15ff1c9c5b22c185ea88174299e.json  query-511650893d4f2968bc8e88d8a25a74f63f48de92c6164ed4e294ce17c0db5f09.json  query-52d058eeccf3c758a63f73049cd5fb3cb39ffc8e90086a3ff874b29db3be2fe0.json  query-54f3105fd2a093bf6285314c8da5cff7c02289bb7cc267fb0e79d749a50e364b.json  (+48 more)
api/crates/api/: Cargo.toml
api/crates/db/: Cargo.toml
(+78 files in other folders)
