[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
